# Mp3Decoder

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jingju/ffmpegdecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: accompany_decoder.cpp  accompany_decoder_controller.cpp  native-lib.cpp
app/src/main/cpp/include/: accompany_decoder.h
app/src/main/java/com/jingju/ffmpegdecoder/: MainActivity.java  Mp3Decoder.java
app/src/main/java/com/jingju/ffmpegdecoder/utils/: BaseContext.java  BrandUtils.java  CanPauseCountDownTimer.java  CommonUtils.java  Constant.java  ContextUtil.java  DisplayUtil.java  EncryptUtil.java  FileProviderUtil.java  FileUtil.java  ImageUtil.java  LogUtils.java  OSUtils.java  ThreadUtils.java  ToastUtils.java
app/src/main/java/com/jingju/ffmpegdecoder/utils/permission/: ActivityPermissionDispatcher.java  FragmentPermissionDispatcher.java  PermissionCallback.java  PermissionState.java  PermissionUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jingju/ffmpegdecoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
